--- a/my/docker-compose.yml
+++ b/my/docker-compose.yml
@@ -11,6 +11,17 @@ services:
     environment:
       - 'MYSQL_ROOT_PASSWORD=HBQ521521cf*'
     image: biarms/mysql:5.7.30-linux-arm64v8
+  mysql7:
+    container_name: mysql7
+    restart: always
+    volumes:
+      - '/opt/config/mysqld7.cnf:/etc/mysql/mysql.conf.d/mysqld.cnf'
+      - '/out/mysql/:/out/mysql/'
+    ports:
+      - '3307:3306'
+    environment:
+      - 'MYSQL_ROOT_PASSWORD=HBQ521521cf*'
+    image: biarms/mysql:5.7.30-linux-arm64v8
   mysql8:
     container_name: mysql8
     restart: always
@@ -18,7 +29,7 @@ services:
       - '/opt/config/mysqld8.cnf:/etc/my.cnf'
       - '/out/mysql8/:/out/mysql8/'
     ports:
-      - '3307:3306'
+      - '3308:3306'
     environment:
       - 'MYSQL_ROOT_PASSWORD=HBQ521521cf*'
     image: mysql/mysql-server:8.0.27
