--- a/my/docker-compose.yml
+++ b/my/docker-compose.yml
@@ -6,6 +6,7 @@ services:
     volumes:
       - '/opt/config/mysqld.cnf:/etc/mysql/mysql.conf.d/mysqld.cnf'
       - '/out/mysql/:/out/mysql/'
+      - '/etc/localtime:/etc/localtime'
     ports:
       - '3306:3306'
     environment:
@@ -17,6 +18,7 @@ services:
     volumes:
       - '/opt/config/mysqld7.cnf:/etc/mysql/mysql.conf.d/mysqld.cnf'
       - '/out/mysql7/:/out/mysql7/'
+      - '/etc/localtime:/etc/localtime'
     ports:
       - '3307:3306'
     environment:
@@ -28,6 +30,7 @@ services:
     volumes:
       - '/opt/config/mysqld8.cnf:/etc/my.cnf'
       - '/out/mysql8/:/out/mysql8/'
+      - '/etc/localtime:/etc/localtime'
     ports:
       - '3308:3306'
     environment:
