阿里云盘恢复

--- a/my/docker-compose-amd.yml
+++ b/my/docker-compose-amd.yml
@@ -6,12 +6,8 @@ services:
     ports:
       - '81:8080'
     environment:
-      - TZ=Asia/Shanghai
-      - JAVA_OPTS=-Xmx1g
-      - ALIYUNDRIVE_AUTH_USERNAME=admin
-      - ALIYUNDRIVE_AUTH_PASSWORD=HBQ521521cf*
-      - ALIYUNDRIVE_REFRESH_TOKEN=dea9215b0d504e50acf3495a86e3ef54
-    image: baoqihui/webdav-aliyundriver:amd
+      - 'REFRESH_TOKEN=10846b5dbc3a42809b204e45aea6eb49'
+    image: baoqihui/aliyundrive-webdav:amd
   mysql:
     container_name: mysql
     restart: always
