--- a/my/docker-compose.yml
+++ b/my/docker-compose.yml
@@ -73,8 +73,8 @@ services:
     network_mode: host
     volumes:
       - '/opt/nginx/nginx.conf:/etc/nginx/nginx.conf'
-      - '/opt/nginx/conf.d:/etc/nginx/conf.d'
-      - '/opt/cert:/etc/nginx/cert'
+      - '/opt/nginx/cert/:/etc/nginx/cert/'
+      - '/opt/nginx/conf.d/:/etc/nginx/conf.d/'
       - '/opt/minio/data/dev-ui:/etc/nginx/dev-ui'
     image: nginx:1.13
   rabbitmq:
@@ -84,28 +84,6 @@ services:
       - '15672:15672'
       - '5672:5672'
     image: 'rabbitmq:3.8-management'
-  alist:
-    container_name: alist
-    restart: always
-    volumes:
-      - '/opt/alist:/opt/alist/data'
-    ports:
-      - '5244:5244'
-    image: xhofe/alist:latest
-  ql:
-    container_name: ql
-    restart: always
-    volumes:
-      - /opt/ql/data:/ql/data
-    ports:
-      - "87:5700"
-    image: whyour/qinglong
-  speedtest:
-    container_name: speed
-    restart: always
-    ports:
-      - '88:80'
-    image: stilleshan/speedtest-x
   hui:
     container_name: hui
     restart: always
@@ -131,10 +109,33 @@ services:
     volumes:
       - '/opt/config/status.json:/ServerStatus/server/config.json'
     image: stilleshan/serverstatus
+  alist:
+    container_name: alist
+    restart: always
+    volumes:
+      - '/opt/alist:/opt/alist/data'
+    ports:
+      - '84:5244'
+    image: xhofe/alist:latest
+  speedtest:
+    container_name: speed
+    restart: always
+    ports:
+      - '85:80'
+    image: stilleshan/speedtest-x
   pass:
     container_name: pass
+    restart: always
     volumes:
       - '/opt/pass/:/data/'
     ports:
       - '86:80'
     image: 'vaultwarden/server:latest'
+  ql:
+    container_name: ql
+    restart: always
+    volumes:
+      - /opt/ql/data:/ql/data
+    ports:
+      - "87:5700"
+    image: whyour/qinglong
